# rust_template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: publish.sh  test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
xxx_core/: Cargo.toml  README.md
xxx_core/src/: lib.rs
